# kodex

./: .gitignore  README.md  package.json  pyproject.toml
api-docs/: Code Result.bru  Download Exam Questions.bru  Fetch Exam Details.bru  Fetch Exam Questions.bru  Get submitted answers.bru  Run Code.bru  Submit And End Exam.bru  Submit Answer.bru  Submit Proctoring Images.bru  [Malpractice] Submit And End Exam.bru  bruno.json
frontend/: index.html  jsconfig.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  router.js
frontend/src/pages/: Exam.vue  ExamWelcome.vue
frontend/src/store/: exam.js
frontend/src/views/components/: MarkdownRenderer.vue
frontend/src/views/pages/: Exam.vue  ExamCompleted.vue  ExamCompletedMalpractice.vue  ExamInvalid.vue  ExamQuestions.vue  ExamWelcome.vue
frontend/src/views/partials/: CodeEditor.vue  FullScreenMode.vue  TestCase.vue  WebcamFeed.vue
kodex/: hooks.py  modules.txt
kodex/api/: __init__.py
kodex/fixtures/: coding_language.json  email_template.json  role.json  workspace.json
kodex/kodex/doctype/available_coding_language/: available_coding_language.json  available_coding_language.py
kodex/kodex/doctype/code_question_test/: code_question_test.json  code_question_test.py
kodex/kodex/doctype/code_runner/: code_runner.js  code_runner.json  code_runner.py  test_code_runner.py
kodex/kodex/doctype/coding_language/: coding_language.js  coding_language.json  coding_language.py  test_coding_language.py
kodex/kodex/doctype/examination/: examination.js  (+3 more)
kodex/utils/: judge0.py
kodex/www/: kodex.py
(+49 files in other folders)
